force-app/main/default/objects/Vehicle_Location__c/Vehicle_Location__c.object-meta.xml
<CustomObject>
    <label>Vehicle Location</label>
    <nameField>
        <displayFormat>VL-{000000000}</displayFormat>
        <label>Vehicle Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>