force-app/main/default/objects/Vehicle_Location__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Reverse-geocoded address for this sample.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>