force-app/main/default/objects/Vehicle_Location__c/fields/GPS_Insights_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>GPS_Insights_Location_Id__c</fullName>
    <description>Unique location sample identifier from GPS Insights.</description>
    <externalId>true</externalId>
    <label>GPS Insights Location Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>