force-app/main/default/objects/Vehicle_Location__c/fields/Ignition_On__c.field-meta.xml
<CustomField>
    <fullName>Ignition_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the vehicle ignition was on at this sample time.</description>
    <label>Ignition On</label>
    <type>Checkbox</type>
</CustomField>