force-app/main/default/objects/Vehicle_Location__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Longitude of this location sample.</description>
    <label>Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>