force-app/main/default/objects/Vehicle_Location__c/fields/Odometer_Miles__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Miles__c</fullName>
    <description>Odometer reading at this sample time.</description>
    <label>Odometer Miles</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>