force-app/main/default/objects/Vehicle_Location__c/fields/Speed_Mph__c.field-meta.xml
<CustomField>
    <fullName>Speed_Mph__c</fullName>
    <description>Vehicle speed at the time of this sample.</description>
    <label>Speed (mph)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>