force-app/main/default/objects/Vehicle_Location__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp of this GPS sample.</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>